<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42"
            android:id="@+id/guideline6"
    ></androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59"
            android:id="@+id/guideline7"
    ></androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"
            android:id="@+id/guideline8"
    ></androidx.constraintlayout.widget.Guideline>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:ignore="MissingConstraints"
              app:layout_constraintTop_toTopOf="@id/guideline1"
              app:layout_constraintStart_toStartOf="@id/guideline4"
              app:layout_constraintEnd_toEndOf="@id/guideline5"
              app:layout_constraintBottom_toBottomOf="@id/guideline2"
              android:text="@string/welcome"
              android:textColor="@color/backgroundColorBiggerThan2048"
              android:textSize="40sp"
              android:textStyle="bold"
    >
    </TextView>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            app:layout_constraintBottom_toBottomOf="@id/guideline6"
            android:text="@string/start"
            android:textSize="40sp"
            android:onClick="gotoPlay"
    >
    </Button>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/guideline6"
            app:layout_constraintBottom_toBottomOf="@id/guideline7"
            android:text="@string/rank"
            android:textSize="40sp"
            android:onClick="gotoRank"
    >
    </Button>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/guideline7"
            app:layout_constraintBottom_toBottomOf="@id/guideline8"
            android:text="@string/about"
            android:textSize="40sp"
            android:onClick="about"
    >
    </Button>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/guideline8"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            android:text="@string/exit"
            android:textSize="40sp"
            android:textColor="@color/backgroundColor64"
            android:onClick="exit"
    >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
